--- a/index .html
+++ b/index .html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Python Game Preview</title>
+    <title>Adventure Game</title>
     <style>
         body {
             font-family: monospace;
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-    <h1>Python Game Preview</h1>
+    <h1>Adventure Game</h1>
     <div id="output"></div>
     <input type="text" id="input" placeholder="Enter your command here">
     <script>
